--- a/src/ParticipationMarker/ParticipationMarker.FunctionApp/ParticipationMarker.FunctionApp.csproj
+++ b/src/ParticipationMarker/ParticipationMarker.FunctionApp/ParticipationMarker.FunctionApp.csproj
@@ -4,6 +4,9 @@
         <AzureFunctionsVersion>V3</AzureFunctionsVersion>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.EventGrid" Version="2.1.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.5" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.3" />
     </ItemGroup>
     <ItemGroup>
@@ -11,11 +14,13 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <None Update="local.settings.json">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\ParticipationMarker.App\ParticipationMarker.App.csproj" />
+      <ProjectReference Include="..\ParticipationMarker.Common\ParticipationMarker.Common.csproj" />
+      <ProjectReference Include="..\ParticipationMarker.Infrastructure\ParticipationMarker.Infrastructure.csproj" />
       <ProjectReference Include="..\ParticipationMarker.TelegramBot\ParticipationMarker.TelegramBot.csproj" />
     </ItemGroup>
 </Project>
